Avoid jumping of faqs

--- a/gcp/appengine/frontend3/src/styles.scss
+++ b/gcp/appengine/frontend3/src/styles.scss
@@ -998,7 +998,7 @@ dl.vulnerability-details,
   }
 
   .questions {
-    max-width: 800px;
+    width: 800px;
     margin: 0 auto;
 
     --const-mq-affordances:
